# BombSeq

./: CMakeLists.txt  PROJECT_CONTEXT.md  README.md  TASK.md
.github/workflows/: build.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/engine/: Pattern.cpp  Pattern.h  PatternBank.cpp  PatternBank.h  SequencerEngine.cpp  SequencerEngine.h  Step.h
src/ui/: MpcLookAndFeel.cpp  MpcLookAndFeel.h  PatternSelector.cpp  PatternSelector.h  SaveLoadPanel.cpp  SaveLoadPanel.h  StepEditor.cpp  StepEditor.h  StepGrid.cpp  StepGrid.h  TransportBar.cpp  TransportBar.h
